kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: devops

spec:
  type: NodePort

  selector:
    app: flask-app

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007
